Builds binaries completly static and links librt on UNIX systems

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ function(version version_string)
 endfunction()
 
 
-# Defintions:
+# Options:
 # 
 # Version of the whole tool box. Subprojects can define their own versions. If
 # no version is specified, this "global" version will be used,
@@ -32,23 +32,50 @@ version("5.4.0")
 
 option(STATIC_BINARIES "Link binaries statically." ON)
 
+# Print option settings
+message(STATUS "Static binaries ${STATIC_BINARIES}")
+
 
 # Output directory definitions
-# 
+#
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lib)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lib)
 
 
+# Tell CMake where to look for additional CMake modules
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake")
+
+# Link only to static libs (incl. libc and others)
+if(STATIC_BINARIES)
+  set(CMAKE_FIND_LIBRARY_SUFFIXES ".a")
+  set(BUILD_SHARED_LIBRARIES OFF)
+  set(CMAKE_EXE_LINKER_FLAGS "-static")
+endif()
+
+
 # Dependencies:
-# 
+#
 include_directories(${PROJECT_SOURCE_DIR})
+
+# Build with realtime extensions (librt) on UNIX system
+if(UNIX)
+  find_package(Librt)
+  include_directories(${LIBRT_INCLUDES})
+  add_definitions("-l${LIBRT_LIBRARIES}")
+endif()
 
 
 # Compile flags:
-# 
-add_definitions(-D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS)
+#
+add_definitions("-D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS")
 
+if(CMAKE_COMPILER_IS_GNUCXX AND CMAKE_BUILD_TYPE STREQUAL "Debug")
+  message(STATUS "enable verbose compiler warnings")
+  add_definitions("-Wall -Wextra -ffloat-store -Wno-unused-but-set-variable"
+                  "-Wno-unused-variable -Wno-unused-parameter -Wno-sign-compare"
+                  "-Wno-parentheses")
+endif()
 
 # Sub-Projects:
 # 
