Adds cmake options for shiftbmc and warnings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,10 +31,13 @@ endfunction()
 version("5.4.0")
 
 option(STATIC_BINARIES "Link binaries statically." ON)
+option(SHIFTBMC        "Include agier and shiftbmc build targets" OFF)
+option(WARNINGS        "Set verbose warning flags" OFF)
 
 # Print option settings
 message(STATUS "Static binaries ${STATIC_BINARIES}")
-
+message(STATUS "ShiftBMC ${SHIFTBMC}")
+message(STATUS "Verbose warnings ${WARNINGS}")
 
 # Output directory definitions
 #
@@ -53,7 +56,6 @@ if(STATIC_BINARIES)
   set(CMAKE_EXE_LINKER_FLAGS "-static")
 endif()
 
-
 # Dependencies:
 #
 include_directories(${PROJECT_SOURCE_DIR})
@@ -70,7 +72,7 @@ endif()
 #
 add_definitions("-D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS")
 
-if(CMAKE_COMPILER_IS_GNUCXX AND CMAKE_BUILD_TYPE STREQUAL "Debug")
+if(CMAKE_COMPILER_IS_GNUCXX AND WARNINGS)
   message(STATUS "enable verbose compiler warnings")
   add_definitions("-Wall -Wextra -ffloat-store -Wno-unused-but-set-variable"
                   "-Wno-unused-variable -Wno-unused-parameter -Wno-sign-compare"
@@ -92,8 +94,11 @@ add_subdirectory(pcasso/)
 add_subdirectory(pfolio/)
 add_subdirectory(proofcheck/)
 add_subdirectory(qprocessor/)
-add_subdirectory(shiftbmc/)
-add_subdirectory(aiger/)
 add_subdirectory(test/)
 add_subdirectory(doc/)
 add_subdirectory(scripts/)
+
+if(SHIFTBMC)
+  add_subdirectory(shiftbmc/)
+  add_subdirectory(aiger/)
+endif()
