extractPerf.cc quick and dirty

--- a/tools/runlim/makefile
+++ b/tools/runlim/makefile
@@ -1,7 +1,5 @@
 runlim: runlim.c makefile VERSION
-	gcc -Wall -O3 -DNDEBUG -DVERSION=\"`cat VERSION`\" -o runlim runlim.c -lutil -static
-#	gcc -Wall -O0 -g  -DVERSION=\"`cat VERSION`\" -o runlim runlim.c -lutil
-
+	gcc -Wall -O3 -DNDEBUG -DVERSION=\"`cat VERSION`\" -o runlim runlim.c -lutil
 clean:
 	rm -f runlim
 .PHONY: clean
