--- a/.astylerc
+++ b/.astylerc
@@ -18,6 +18,7 @@
 # Pythons indention syntax is cool -- but not in C++ code. We use brackets for each
 # statement.
 --add-brackets
+--add-one-line-brackets
 # indent class visibility modifiers (public, protected)
 # one half indent
 --indent-modifiers
@@ -26,6 +27,10 @@
 --indent-preproc-cond
 --indent-preproc-define
 --convert-tabs
+# insert space padding around operators
+--pad-oper
+# Insert space padding between a header (e.g. 'if', 'for', 'while'...) and the following paren
+--pad-header
 # riss and co. have a lot of one line statements.
 # We keep them alive
 --keep-one-line-statements
@@ -33,4 +38,3 @@
 # The reference "&" will be written directly after the
 # type
 --align-reference=type
-    
