--- a/shiftbmc/CMakeLists.txt
+++ b/shiftbmc/CMakeLists.txt
@@ -2,28 +2,25 @@
 # 
 project(shiftbmc)
 
-# Dependencies:
-# 
-set(PICOSAT_LIB "/usr/local/lib" CACHE FILEPATH "Path to the directory containing the PicoSAT library")
-link_directories(${PICOSAT_LIB})
-include_directories(${PICOSAT_LIB})
-
-
-# Libraries:
-# 
-
 # Executables:
 # 
-add_executable(shiftbmc         shiftbmc.cc)
-add_executable(shiftbmc-abc     shiftbmc.cc)
+add_executable(shiftbmc       shiftbmc.cc)
+add_executable(shiftbmc-abc   shiftbmc.cc)
 
 
 if(STATIC_BINARIES)
-  target_link_libraries(shiftbmc        riss-lib-static coprocessor-lib-static aiger-lib-static)
-  target_link_libraries(shiftbmc-abc    riss-lib-static coprocessor-lib-static aiger-lib-static)
+  add_dependencies(shiftbmc     picosat-lib-static)
+  add_dependencies(shiftbmc-abc picosat-lib-static)
+
+  # we have to declare "riss-lib-static" twice because of circular dependencies
+  target_link_libraries(shiftbmc        aiger-lib-static riss-lib-static coprocessor-lib-static riss-lib-static pfolio-lib-static picosat-lib-static)
+  target_link_libraries(shiftbmc-abc    aiger-lib-static riss-lib-static coprocessor-lib-static riss-lib-static pfolio-lib-static picosat-lib-static)
 else()
-  target_link_libraries(shiftbmc        riss-lib-shared coprocessor-lib-shared aiger-lib-shared)
-  target_link_libraries(shiftbmc-abc    riss-lib-shared coprocessor-lib-shared aiger-lib-shared)
+  add_dependencies(shiftbmc     picosat-lib-shared)
+  add_dependencies(shiftbmc-abc picosat-lib-shared)
+
+  target_link_libraries(shiftbmc        riss-lib-shared coprocessor-lib-shared pfolio-lib-shared picosat-lib-shared aiger-lib-shared)
+  target_link_libraries(shiftbmc-abc    riss-lib-shared coprocessor-lib-shared pfolio-lib-shared picosat-lib-shared aiger-lib-shared)
 endif()
 
 
