add pblib to openwbo

--- a/externalTools/open-wbo/Makefile
+++ b/externalTools/open-wbo/Makefile
@@ -26,17 +26,20 @@ EXEC       = open-wbo
 DEPDIR     = mtl utils core 
 
 # For the original Minisat based systems
-DEPDIR     +=  ../../encodings ../../algorithms
+DEPDIR     +=  ../../encodings ../../algorithms ../../pblib
 MROOT      = $(PWD)/solvers/$(SOLVERDIR)
-CFLAGS     = -Wall -Wno-parentheses -g3 -DNSPACE=$(NSPACE) -DSOLVERNAME=$(SOLVERNAME) -DVERSION=$(VERSION)
+CFLAGS     = -Wall -Wno-parentheses -g3 -DNSPACE=$(NSPACE) -DSOLVERNAME=$(SOLVERNAME) -DVERSION=$(VERSION) 
+# -DPBLIB -std=c++11 
+LFLAGS     += -Lpblib -lpblib
 
 # Riss is based on cmake, and located somewhere else, and relies on coprocessor, and requires more libraries
 ifeq ($(SOLVERDIR),riss)
-DEPDIR     = mtl utils core 
+DEPDIR     = mtl utils core ../../pblib
 DEPDIR     += ../externalTools/open-wbo/encodings ../externalTools/open-wbo/algorithms ../coprocessor
 MROOT      = ../../$(SOLVERDIR)
-CFLAGS     = -I .. -I ../.. -I ../externalTools/open-wbo -I ../coprocessor  -Wall -Wno-parentheses -g3 -DNSPACE=$(NSPACE) -DSOLVERNAME=$(SOLVERNAME) -DVERSION=$(VERSION)
-LFLAGS     = -lpthread -lz -lrt
+CFLAGS     = -I .. -I ../.. -I ../externalTools/open-wbo -I ../coprocessor -Wall -Wno-parentheses -g3 -DNSPACE=$(NSPACE) -DSOLVERNAME=$(SOLVERNAME) -DVERSION=$(VERSION)
+# CFLAGS     = -I .. -I ../.. -I ../externalTools/open-wbo -I ../coprocessor -DPBLIB -std=c++11 -Wall -Wno-parentheses -g3 -DNSPACE=$(NSPACE) -DSOLVERNAME=$(SOLVERNAME) -DVERSION=$(VERSION)
+LFLAGS     = -lpthread -lz -lrt -Lpblib -lpblib
 endif
 
 ifeq ($(VERSION),simp)
