--- a/proofcheck/CMakeLists.txt
+++ b/proofcheck/CMakeLists.txt
@@ -32,9 +32,9 @@ set_target_properties(${PROJECT_NAME}-lib-shared PROPERTIES
 add_executable(${PROJECT_NAME} Main.cc)
 
 if(STATIC_BINARIES)
-  target_link_libraries(${PROJECT_NAME} ${PROJECT_NAME}-lib-static riss-lib-static)
+  target_link_libraries(${PROJECT_NAME} ${PROJECT_NAME}-lib-static riss-lib-static coprocessor-lib-static)
 else()
-  target_link_libraries(${PROJECT_NAME} ${PROJECT_NAME}-lib-shared riss-lib-shared)
+  target_link_libraries(${PROJECT_NAME} ${PROJECT_NAME}-lib-shared riss-lib-shared coprocessor-lib-shared)
 endif()
 
 # Installation:
