--- a/externalTools/open-wbo/Makefile
+++ b/externalTools/open-wbo/Makefile
@@ -26,11 +26,10 @@ EXEC       = open-wbo
 DEPDIR     = mtl utils core 
 
 # For the original Minisat based systems
-DEPDIR     +=  ../../encodings ../../algorithms ../../pblib
+DEPDIR     +=  ../../encodings ../../algorithms
 MROOT      = $(PWD)/solvers/$(SOLVERDIR)
 CFLAGS     = -Wall -Wno-parentheses -g3 -DNSPACE=$(NSPACE) -DSOLVERNAME=$(SOLVERNAME) -DVERSION=$(VERSION) 
 # -DPBLIB -std=c++11 
-LFLAGS     += -Lpblib -lpblib
 
 # Riss is based on cmake, and located somewhere else, and relies on coprocessor, and requires more libraries
 ifeq ($(SOLVERDIR),riss)
@@ -38,7 +37,7 @@ DEPDIR     = mtl utils core ../../pblib
 DEPDIR     += ../externalTools/open-wbo/encodings ../externalTools/open-wbo/algorithms ../coprocessor
 MROOT      = ../../$(SOLVERDIR)
 CFLAGS     = -I .. -I ../.. -I ../externalTools/open-wbo -I ../coprocessor -Wall -Wno-parentheses -g3 -DNSPACE=$(NSPACE) -DSOLVERNAME=$(SOLVERNAME) -DVERSION=$(VERSION)
-LFLAGS     = -lpthread -lz -lrt -Lpblib -lpblib
+LFLAGS     = -lpthread -lz -lrt
 endif
 
 # compile with PBLib and use it
