Removes env variables from CI script

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,19 +1,19 @@
 before_script:
   - printenv
   # build fuzz checker
-  - cd $CI_PROJECT_DIR/tools/checker
+  - cd tools/checker
   - make
 
 build-debug:
   script:
-    - mkdir $CI_PROJECT_DIR/debug/
-    - cd $CI_PROJECT_DIR/debug/
-    - cmake -D CMAKE_BUILD_TYPE=Debug $CI_PROJECT_DIR
+    - mkdir debug/
+    - cd debug/
+    - cmake -D CMAKE_BUILD_TYPE=Debug ..
     - make all
 
 build-release:
   script:
-    - mkdir $CI_PROJECT_DIR/release/
-    - cd $CI_PROJECT_DIR/release/
-    - cmake -D CMAKE_BUILD_TYPE=Debug $CI_PROJECT_DIR
+    - mkdir release/
+    - cd release/
+    - cmake -D CMAKE_BUILD_TYPE=Debug ..
     - make all
