--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,7 @@ before_script:
   # build fuzz checker
   - cd tools/checker
   - make
+  - cd ../..
 
 build-debug:
   script:
@@ -15,5 +16,5 @@ build-release:
   script:
     - mkdir release/
     - cd release/
-    - cmake -D CMAKE_BUILD_TYPE=Debug ..
+    - cmake -D CMAKE_BUILD_TYPE=Release ..
     - make all
