Adds C++ support and replaces NULL with nullptr

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,7 +76,7 @@ include_directories(${PROJECT_SOURCE_DIR})
 
 # Compile flags:
 # 
-add_definitions("-D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS -g")
+add_definitions("-D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS -std=c++11 -g")
 
 if(CMAKE_COMPILER_IS_GNUCXX AND WARNINGS)
   message(STATUS "enable verbose compiler warnings")
