--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,7 +73,7 @@ include_directories(${PROJECT_SOURCE_DIR})
 
 # Compile flags:
 # 
-add_definitions("-D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS")
+add_definitions("-std=c++11 -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS")
 
 if(CMAKE_COMPILER_IS_GNUCXX AND WARNINGS)
   message(STATUS "enable verbose compiler warnings")
